samples/_failures_safe/1761254747_3469eb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5e0492fd.c: In function ‘main’:
./samples/SAFE/__tmp_5e0492fd.c:176:5: error: expected expression at end of input
  176 |     state_machine_init(&
      |     ^~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_5e0492fd.c:176:5: error: expected declaration or statement at end of input
